# rmi-and-rpc-examples

./: README.md
rmi-example/client/: .anjuta_sym_db.db  Makefile.am  Makefile.in  README  README.bak  configure  configure.ac
rmi-example/client/.anjuta/session/: anjuta.session  dock-layout.xml
rmi-example/client/Debug/: Makefile  config.h  config.status  libtool
rmi-example/client/Debug/src/: Makefile  swe545_assignment1_client
rmi-example/client/Debug/src/.deps/: main.Po
rmi-example/client/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
rmi-example/client/src/: Makefile.am  Makefile.in  main.c
rmi-example/server/: .anjuta_sym_db.db  Makefile.am  Makefile.in  README  README.bak  README~  configure  configure.ac
rmi-example/server/.anjuta/session/: anjuta.session  dock-layout.xml
rmi-example/server/Debug/: Makefile  config.h  config.status  libtool
rmi-example/server/Debug/src/: Makefile  swe545_assigment1_server
rmi-example/server/Debug/src/.deps/: main.Po
rmi-example/server/autom4te.cache/: output.0  output.1  traces.1
rmi-example/server/src/: Makefile.am  Makefile.in  main.c
rpc-example/: README  msg.h  msg.x  msg_client  msg_clnt.c  msg_proc.c  msg_server  msg_svc.c  rassignmsg.c  rassignmsg.c.bak
